--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "pop-up-submit": "^1.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
